<resources>
    <string name="WaitTip">Please wait</string>
    <string name="abandon">Quit</string>
    <string name="abandon_backtrace">Discard?</string>
    <string name="abandon_current_op">Discard?</string>
    <string name="abandon_doc">Discard?</string>
    <string name="abandon_edit_photo">Discard?</string>
    <string name="abandon_edit_video">Quit?</string>
    <string name="abandon_puzzle">Discard?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_server_error">The system is busy, please try again later</string>
    <string name="action_finish">Done</string>
    <string name="action_settings">Settings</string>
    <string name="ad_close_tip">Skip %d</string>
    <string name="add_new_album">add new album</string>
    <string name="add_privacy_photo">Add private photos</string>
    <string name="album_fragment_total_photo">%1$s photo(s) in total</string>
    <string name="album_fragment_total_photo_and_video">%1$s photo(s), %2$4s video(s) in total</string>
    <string name="album_fragment_total_video">%1$s video(s)</string>
    <string name="albums">Albums</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_remove">Remove</string>
    <string name="alipay_data_exception">Data format incorrect</string>
    <string name="alipay_server_error">Payment service is updating</string>
    <string name="alipay_unknown_error">Alipay no response, please try again</string>
    <string name="all">All</string>
    <string name="all_focus">All in focus</string>
    <string name="all_photos">All Photos</string>
    <string name="all_picture_list_title">All photos</string>
    <string name="alwaysUse">Use this option as default</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Gallery</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aspect16to9_effect">16:9</string>
    <string name="aspect1to1_effect">1:1</string>
    <string name="aspect9to16_effect">16:9</string>
    <string name="association_face">People</string>
    <string name="association_memory_video">Video memoir</string>
    <string name="association_related">Related</string>
    <string name="association_related_not_found">No items found</string>
    <string name="association_related_video">Related</string>
    <string name="association_scene">Clues</string>
    <string name="attachment_exceed">Attachment size exceeded limit %s</string>
    <string name="attachment_size_limit">Select %d photo(s) at most</string>
    <string name="back_to_last_page">back to last page</string>
    <string name="back_trace">backtrace</string>
    <string name="backtrace_tip">Tap face to back trace</string>
    <string name="backup_title">You can select albums that back up automatically via WLAN</string>
    <string name="barcode_data_source">Data source: Smart Snap (kuaipai.cn)</string>
    <string name="beautiful_memory">Old memories</string>
    <string name="beautiful_times">Memories</string>
    <string name="beauty">Auto-makeup</string>
    <string name="beauty_cz">Red lips</string>
    <string name="beauty_fg">Smoky</string>
    <string name="beauty_none">Original</string>
    <string name="beauty_tm">Sweet</string>
    <string name="beauty_tq">Fair</string>
    <string name="beauty_zr">Dreamy</string>
    <string name="black">black</string>
    <string name="blue">blue</string>
    <string name="blur">Blur</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="boxed_album">Other</string>
    <string name="btn_3d_switch_off">Disable 3D photos</string>
    <string name="btn_3d_switch_on">Enable 3D photos</string>
    <string name="burst_selection_hint">%s photo(s) selected</string>
    <string name="call_mz_setting">Network Settings</string>
    <string name="campaign_btn_committing">Receiving…</string>
    <string name="campaign_btn_complete">Receive plan</string>
    <string name="campaign_btn_doing">Receive plan</string>
    <string name="campaign_btn_received">Plan received</string>
    <string name="campaign_err_load_fail">Loading failed, tap the screen to retry</string>
    <string name="campaign_err_load_no_network">No available network, tap the screen to retry</string>
    <string name="campaign_progress" formatted="false">%d/%d completed</string>
    <string name="campaign_success">Plan received</string>
    <string name="campaign_switch">Switch</string>
    <string name="campaign_switch_fail">Switch failed, please try later</string>
    <string name="campaign_switching">Switching</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_favorite">Unfavorite</string>
    <string name="cancle_privacy_mode">Unprivate</string>
    <string name="cannot_delete">Resources on the store demo phones cannot be deleted!</string>
    <string name="cannot_edit_original">Cannot edit original</string>
    <string name="cannot_load_image">Cannot load the photo!</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_update">Check for Update</string>
    <string name="check_update_already_latest">Your version is up to date.</string>
    <string name="check_update_checking">Checking for update…</string>
    <string name="check_update_current">"Current version is  "</string>
    <string name="check_update_fail">Failed to get version info</string>
    <string name="check_update_has_update">, tap to upgrade</string>
    <string name="check_update_upgrading">Updating</string>
    <string name="city_and_day_journey">Journey to %1$s for %2$d days</string>
    <string name="click_to_edit_album_cover">click to edit album cover</string>
    <string name="close">Close</string>
    <string name="close_moment">Close Moments?</string>
    <string name="close_moment_message">After closing the Moments, its content will be emptied. Next time you need to rescan to create Moments</string>
    <string name="cloud_cannot_delete_frozen_album">Album deletion is not supported during thawing</string>
    <string name="cloud_day">day</string>
    <string name="cloud_default_folder_string">New album</string>
    <string name="cloud_delete_album_title">Delete album?</string>
    <string name="cloud_manage_menu_savein_sdcard">"Preferred download location: "</string>
    <string name="cloud_manage_menu_savein_sdcard_summary">SD card</string>
    <string name="cloud_menu_title_add_folder">New album</string>
    <string name="cloud_menu_title_change_member_level">Upgrade storage</string>
    <string name="cloud_menu_title_cloud_sync_manage">Transfer management</string>
    <string name="cloud_menu_title_download">Download</string>
    <string name="cloud_menu_title_puzzle">Collage</string>
    <string name="cloud_menu_title_rename">Rename album</string>
    <string name="cloud_menu_title_sync_settings">Auto-sync</string>
    <string name="cloud_menu_title_upload">Upload</string>
    <string name="cloud_menu_title_user_policy">User Agreement</string>
    <string name="cloud_peaceful_backup">Backup to Cloud silently</string>
    <string name="cloud_peaceful_backup_summary">No notifications during backup</string>
    <string name="dark_violet">Deep purple</string>
    <string name="edit_image">Edit</string>
    <string name="face_albumset_page_title">People album</string>
    <string name="face_not_matched">Unmatch</string>
    <string name="favorita">Favorite</string>
    <string name="filter_toolbar_mark">Mark</string>
    <string name="four_three_crop_aspect">4:3</string>
    <string name="freely_crop_aspect">Free</string>
    <string name="gray">gray</string>
    <string name="green">green</string>
    <string name="light_green">cyan</string>
    <string name="location_title">Places album</string>
    <string name="menu_box">Move to Other</string>
    <string name="menu_delete_title">Delete</string>
    <string name="menu_disable_backup">Disable auto-sync</string>
    <string name="menu_enable_backup">Enable auto-sync</string>
    <string name="menu_hide_in_latest">Not in photo tab</string>
    <string name="menu_more_title">More</string>
    <string name="menu_share_title">Share</string>
    <string name="menu_show_in_latest">In photo tab</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_unbox">Out from Other</string>
    <string name="move">Move</string>
    <string name="nine_sixteen_crop_aspect">9:16</string>
    <string name="one_one_crop_aspect">1:1</string>
    <string name="online_module_cloud">Cloud Album</string>
    <string name="online_module_moment">Moments</string>
    <string name="online_module_sticker">Online stickers</string>
    <string name="orange">orange</string>
    <string name="pick_color_from_screen">pick color from screen</string>
    <string name="purple">purple</string>
    <string name="red">red</string>
    <string name="release_space">Free up space</string>
    <string name="scene_album_name">Clues album</string>
    <string name="set_as_privacy_mode">Set at private</string>
    <string name="set_cover">Set cover</string>
    <string name="share">Share</string>
    <string name="sixteen_nine_crop_aspect">16:9</string>
    <string name="small_size_filter">Hide photos less than 20 KB</string>
    <string name="splash_ad_switch">Splash screen ad</string>
    <string name="splash_ad_switch_summary">Informed with selected contents</string>
    <string name="three_four_crop_aspect">3:4</string>
    <string name="trash_album_name">Recycle bin</string>
    <string name="video_pause">Pause</string>
    <string name="view_with_original_size">Display in original size</string>
    <string name="violet">violet</string>
    <string name="white">white</string>
    <string name="yellow">yellow</string>
    <string name="yellow_green">yellow and green</string>
</resources>