<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_folder_hide" android:id="@id/action_hide_photo" android:visible="false" android:title="@string/set_as_privacy_mode" android:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item android:icon="@drawable/btn_upload_cloud" android:id="@id/action_cloud_upload" android:title="@string/cloud_menu_title_upload" android:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item android:icon="@drawable/ic_menu_share" android:id="@id/action_share" android:title="@string/share" android:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item android:icon="@drawable/ic_menu_puzzle" android:id="@id/action_puzzle" android:title="@string/cloud_menu_title_puzzle" android:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item android:icon="@drawable/scene_not_match" android:id="@id/action_face_remove" android:title="@string/face_not_matched" android:showAsAction="always|withText" app:showAsAction="always|withText" />
    <item android:icon="@drawable/btn_delete" android:id="@id/action_delete" android:title="@string/menu_delete_title" android:showAsAction="always|withText" app:showAsAction="always|withText" />
</menu>