<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@drawable/dialog_color_bg" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:facebeauty="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_picker" android:paddingTop="14.0dip" android:paddingBottom="13.0dip" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@string/pick_color_from_screen" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" facebeauty:circleBg="@drawable/ic_color" facebeauty:circleBgPress="@drawable/ic_color_pressed" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_custom" android:paddingTop="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/gray" facebeauty:circleBg="#ff7e97ac" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_01" android:paddingTop="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/white" facebeauty:circleBg="#ffffffff" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_02" android:paddingTop="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/black" facebeauty:circleBg="#ff000000" facebeauty:innerRingColor="#ff505050" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_03" android:paddingTop="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/red" facebeauty:circleBg="#ffdc2a2a" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_04" android:paddingTop="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/orange" facebeauty:circleBg="#fffc5b23" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_05" android:paddingTop="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/yellow" facebeauty:circleBg="#ffffaf00" style="@style/DialogDoodleColorItem" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_06" android:paddingBottom="@dimen/filtershow_coloritem_padding" android:layout_marginLeft="0.0dip" android:contentDescription="@string/yellow_green" facebeauty:circleBg="#ffb3c759" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_07" android:paddingBottom="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/green" facebeauty:circleBg="#ff3bc06b" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_08" android:paddingBottom="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/light_green" facebeauty:circleBg="#ff04c0cf" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_09" android:paddingBottom="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/blue" facebeauty:circleBg="#ff198ded" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_10" android:paddingBottom="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/violet" facebeauty:circleBg="#ff4a67cf" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_11" android:paddingBottom="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/dark_violet" facebeauty:circleBg="#ff3a4ec6" style="@style/DialogDoodleColorItem" />
        <com.meizu.media.gallery.filtershow.ui.ColorItemView android:id="@id/doodle_color_12" android:paddingBottom="@dimen/filtershow_coloritem_padding" android:contentDescription="@string/purple" facebeauty:circleBg="#ff832ae3" style="@style/DialogDoodleColorItem" />
    </LinearLayout>
</LinearLayout>